--- a/src/App.css
+++ b/src/App.css
@@ -234,7 +234,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 .banner {
   margin-top: 0;
   padding: 260px 0 100px 0;
-  background-image: url('./assets/img/banner-bg.png');
+  background-image: url('./assets/img/fondouniverso.png');
   background-position: top center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -258,7 +258,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   display: block;
 }
 .banner p {
-  color: #B8B8B8;
+  color: #ecaaaa;
   font-size: 18px;
   letter-spacing: 0.8px;
   line-height: 1.5em;
